--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ textarea {
 
 .card {
     border: 1px solid black;
-    width: 600px;
+    max-width: 600px;
     margin: 0 auto;
     margin-bottom: 20px;
     padding: 20px;
@@ -53,3 +53,4 @@ textarea {
 #Delite:active {
     opacity: 0.5;
 }
+
